--- a/packages/plugins/materials/package.json
+++ b/packages/plugins/materials/package.json
@@ -24,6 +24,7 @@
   "license": "MIT",
   "homepage": "https://opentiny.design/tiny-engine",
   "dependencies": {
+    "@iconify/vue": "^4.1.2",
     "@opentiny/tiny-engine-canvas": "workspace:*",
     "@opentiny/tiny-engine-common": "workspace:*",
     "@opentiny/tiny-engine-controller": "workspace:*",
