--- a/packages/design-core/package.json
+++ b/packages/design-core/package.json
@@ -120,12 +120,13 @@
     "vite": "^5.4.2"
   },
   "peerDependencies": {
-    "@opentiny/vue": "^3.14.0",
-    "@opentiny/vue-design-smb": "^3.14.0",
-    "@opentiny/vue-icon": "^3.14.0",
-    "@opentiny/vue-locale": "^3.14.0",
-    "@opentiny/vue-renderless": "^3.14.0",
-    "@opentiny/vue-theme": "^3.14.0",
+    "@opentiny/vue": "^3.20.0",
+    "@opentiny/vue-design-smb": "^3.20.0",
+    "@opentiny/vue-icon": "^3.20.0",
+    "@opentiny/vue-locale": "^3.20.0",
+    "@opentiny/vue-renderless": "^3.20.0",
+    "@opentiny/vue-runtime": "^3.20.0",
+    "@opentiny/vue-theme": "^3.20.0",
     "vue": "^3.4.23"
   },
   "browserslist": [
