--- a/designer-demo/package.json
+++ b/designer-demo/package.json
@@ -4,9 +4,9 @@
   "version": "2.2.0",
   "type": "module",
   "scripts": {
-    "dev": "cross-env VITE_THEME=light vite",
-    "build:alpha": "cross-env NODE_OPTIONS=--max-old-space-size=8192 VITE_THEME=light vite build --mode alpha",
-    "build": "cross-env NODE_OPTIONS=--max-old-space-size=8192 VITE_THEME=light vite build"
+    "dev": "cross-env vite",
+    "build:alpha": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vite build --mode alpha",
+    "build": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vite build"
   },
   "dependencies": {
     "@opentiny/tiny-engine": "workspace:^",
