--- a/packages/engine-cli/template/designer/package.json
+++ b/packages/engine-cli/template/designer/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "concurrently 'pnpm:serve:mock' 'pnpm:serve:frontend'",
-    "build:alpha": "cross-env NODE_OPTIONS=--max-old-space-size=8192 VITE_THEME=light vite build --mode alpha",
-    "build": "cross-env NODE_OPTIONS=--max-old-space-size=8192 VITE_THEME=light vite build --mode prod",
-    "serve:frontend": "cross-env VITE_THEME=light vite",
+    "build:alpha": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vite build --mode alpha",
+    "build": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vite build --mode prod",
+    "serve:frontend": "cross-env vite",
     "serve:mock": "node node_modules/@opentiny/tiny-engine-mock/dist/app.js"
   },
   "dependencies": {
