--- a/jsconfig.json
+++ b/jsconfig.json
@@ -31,6 +31,7 @@
       "@opentiny/tiny-engine-toolbar-preview": ["packages/toolbars/preview/index"],
       "@opentiny/tiny-engine-toolbar-generate-code": ["packages/toolbars/generate-code/index"],
       "@opentiny/tiny-engine-toolbar-clean": ["packages/toolbars/clean/index"],
+      "@opentiny/tiny-engine-toolbar-theme-switch": ["packages/toolbars/themeSwitch/index"],
       "@opentiny/tiny-engine-toolbar-save": ["packages/toolbars/save/index"],
       "tiny-engine-canvas": ["packages/canvas/index"],
       "@opentiny/tiny-engine-theme-dark": ["packages/theme/dark/index.less"],
@@ -59,6 +60,7 @@
       "@opentiny/tiny-engine-toolbar-media/*": ["packages/toolbars/media/*"],
       "@opentiny/tiny-engine-toolbar-preview/*": ["packages/toolbars/preview/*"],
       "@opentiny/tiny-engine-toolbar-clean/*": ["packages/toolbars/clean/*"],
+      "@opentiny/tiny-engine-toolbar-theme-switch/*": ["packages/toolbars/themeSwitch/*"],
       "@opentiny/tiny-engine-toolbar-save/*": ["packages/toolbars/save/*"],
       "@opentiny/tiny-engine-theme-dark/*": ["packages/theme/dark/*"],
       "@opentiny/tiny-engine-theme-light/*": ["packages/theme/light/*"],
