--- a/packages/design-core/package.json
+++ b/packages/design-core/package.json
@@ -72,6 +72,7 @@
     "@opentiny/tiny-engine-theme-light": "workspace:*",
     "@opentiny/tiny-engine-toolbar-breadcrumb": "workspace:*",
     "@opentiny/tiny-engine-toolbar-clean": "workspace:*",
+    "@opentiny/tiny-engine-toolbar-theme-switch": "workspace:*",
     "@opentiny/tiny-engine-toolbar-collaboration": "workspace:*",
     "@opentiny/tiny-engine-toolbar-fullscreen": "workspace:*",
     "@opentiny/tiny-engine-toolbar-generate-code": "workspace:*",
