feat(theme): change incorrect css variables and delete the ‘less’ file  (#1121)

--- a/designer-demo/package.json
+++ b/designer-demo/package.json
@@ -4,14 +4,12 @@
   "version": "2.2.0",
   "type": "module",
   "scripts": {
-    "dev": "cross-env VITE_THEME=light vite",
-    "build:alpha": "cross-env NODE_OPTIONS=--max-old-space-size=8192 VITE_THEME=light vite build --mode alpha",
-    "build": "cross-env NODE_OPTIONS=--max-old-space-size=8192 VITE_THEME=light vite build"
+    "dev": "cross-env vite",
+    "build:alpha": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vite build --mode alpha",
+    "build": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vite build"
   },
   "dependencies": {
     "@opentiny/tiny-engine": "workspace:^",
-    "@opentiny/tiny-engine-theme-dark": "workspace:*",
-    "@opentiny/tiny-engine-theme-light": "workspace:*",
     "@opentiny/tiny-engine-utils": "workspace:*",
     "@opentiny/vue": "~3.20.0",
     "@opentiny/vue-design-smb": "~3.20.0",
