--- a/packages/engine-cli/template/designer/package.json
+++ b/packages/engine-cli/template/designer/package.json
@@ -5,15 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "concurrently 'pnpm:serve:mock' 'pnpm:serve:frontend'",
-    "build:alpha": "cross-env NODE_OPTIONS=--max-old-space-size=8192 VITE_THEME=light vite build --mode alpha",
-    "build": "cross-env NODE_OPTIONS=--max-old-space-size=8192 VITE_THEME=light vite build --mode prod",
-    "serve:frontend": "cross-env VITE_THEME=light vite",
+    "build:alpha": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vite build --mode alpha",
+    "build": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vite build --mode prod",
+    "serve:frontend": "cross-env vite",
     "serve:mock": "node node_modules/@opentiny/tiny-engine-mock/dist/app.js"
   },
   "dependencies": {
     "@opentiny/tiny-engine": "2.2.0",
-    "@opentiny/tiny-engine-theme-dark": "2.2.0",
-    "@opentiny/tiny-engine-theme-light": "2.2.0",
     "@opentiny/tiny-engine-utils": "2.2.0",
     "@opentiny/vue": "~3.20.0",
     "@opentiny/vue-design-smb": "~3.20.0",
