--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
-semi: false
-singleQuote: true
-printWidth: 120
-trailingComma: 'none'
-endOfLine: 'auto'
+{
+  "semi": false,
+  "singleQuote": true,
+  "printWidth": 120,
+  "trailingComma": "none",
+  "endOfLine": "auto"
+}
